# pygpc

./: .appveyor.yml  .gitignore  .gitlab-ci.yml  .readthedocs.yml  .travis.yml  .travis.yml.swp  .travis_.yml  MANIFEST.in  README.md  appveyor.yml  build_extensions.py  build_pygpc_extensions_cuda.py  error.txt  pyproject.toml  requirements.txt  setup.py  tox.ini  travis.yml
benjamin/: MySimulationModel.py  secondary_fields_analysis.py  tdcs_sensitivity_analysis.py
dev/: MCMC.py  Tutorial_gradient.ipynb  benchmark_create_gpc_matrix.py  benchmark_get_approximation.py  benchmark_pygpc_extensions.py  classifier_test.py  gradient_estimation.py  hdf5_obj_io.py  laguerre_normalization.py  test_LHS.py  testfunction_test_Nik.py
doc/: conf.py  conf_backup.py  doc.aux  doc.out  doc.tex  doc.toc  index.rst  requirements.txt
examples/: MyGPC.py  MyModel.py  PyRates_GPC.py  PyRates_GPC_manual.py  PyRates_GPC_static.py  PyRates_GPC_test.py  PyRates_Model.py  plot_algorithm_meregadaptiveprojection.py  plot_algorithm_mestatic.py  plot_backends.py  plot_basis.py  plot_gradient_enhanced_gpc.py  plot_grid_random_vs_lhs.py  plot_matlab_model.py  plot_problem.py
media/: pygpc_logo.cdr  pygpc_logo_git.cdr
pckg/pygpc_extensions/: .CMakeLists.txt.swp  CMakeLists.txt
pckg/pygpc_extensions/include/pygpc_extensions/: .create_gpc_matrix.hpp.swp  create_gpc_matrix.hpp  get_approximation.hpp
pckg/pygpc_extensions/src/: .pygpc_extensions.cpp.swp  pygpc_extensions.cpp
pckg/pygpc_extensions_cuda/: CMakeLists.txt
pckg/pygpc_extensions_cuda/include/pygpc_extensions_cuda/: create_gpc_matrix.cuh  create_gpc_matrix_wrapper.cuh  get_approximation.cuh  get_approximation_wrapper.cuh
pckg/pygpc_extensions_cuda/src/: create_gpc_matrix_wrapper.cu  get_approximation_wrapper.cu  pygpc_extensions_cuda.cpp
pygpc/: AbstractModel.py  Algorithm.py  Basis.py  BasisFunction.py  Classifier.py  Computation.py  EGPC.py  GPC.py  Gradient.py  Grid.py  MEGPC.py  Problem.py  (+33 more)
pygpc.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+880 files in other folders)
